welcome.lessons.welcome.bat.bool1.PosNeg.scala.code
var a :Boolean=false


def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  
  
  if (negative=false){
    if(a<0 && b<0){
      a=true
    }else{
      a=false
  }
  } 
    else if(a>0 && b<0){
    a=true
  }else if(a<0 && b>0){
    a=true
  }else{
    a=false
  }
  return a
}